[gd_scene load_steps=3 format=2]

[ext_resource path="res://Menu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Menu/theme.tres" type="Theme" id=2]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.5
margin_top = -20.0
margin_right = 20.5
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Play" type="Button" parent="VBoxContainer"]
margin_right = 171.0
margin_bottom = 30.0
text = "Play"

[node name="MusicMute" type="CheckBox" parent="VBoxContainer"]
margin_top = 34.0
margin_right = 171.0
margin_bottom = 64.0
text = "Mute Music"

[node name="SFXMute" type="CheckBox" parent="VBoxContainer"]
margin_top = 68.0
margin_right = 171.0
margin_bottom = 98.0
text = "Mute Sound Effects"

[node name="Fullscreen" type="CheckBox" parent="VBoxContainer"]
margin_top = 102.0
margin_right = 171.0
margin_bottom = 132.0
text = "Fullscreen"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="toggled" from="VBoxContainer/MusicMute" to="." method="_on_MusicMute_toggled"]
[connection signal="toggled" from="VBoxContainer/SFXMute" to="." method="_on_SFXMute_toggled"]
[connection signal="toggled" from="VBoxContainer/Fullscreen" to="." method="_on_Fullscreen_toggled"]
